--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promtify",
+  "name": "the prompt bazaar",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.0",
     "next": "13.4.10",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
