--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "the prompt bazaar",
+  "name": "thepromptbazaar",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,11 +13,12 @@
     "bcrypt": "^5.1.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
-    "next": "13.4.10",
+    "next": "^13.4.11",
     "next-auth": "^4.22.3",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3"
   }
 }
